# RM_C_template

./: CMakeLists.txt  README.md  app.overlay  openocd_run.txt  prj.conf  prompt.md  todo_lists.md
.claude/: settings.local.json
Docs/: IMU_API.md  MINIMAL_TESTS.md  todo_lists.md  外设引脚分配.md
boards/st/RM_C/: Kconfig.rm_c  board.cmake  board.yml  rm_c.dts  rm_c.yaml  rm_c_defconfig
build_imu/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  build_info.yml.bak  cmake_install.cmake  compile_commands.json  sysbuild_modules.txt  zephyr_modules.txt  zephyr_settings.txt
build_imu/Kconfig/: Kconfig.dts  Kconfig.modules  Kconfig.shield  Kconfig.shield.defconfig  kconfig_module_dirs.cmake  kconfig_module_dirs.env
build_imu/Kconfig/arch/: Kconfig
build_imu/Kconfig/boards/: Kconfig  Kconfig.defconfig  Kconfig.rm_c  Kconfig.sysbuild.tmp
build_imu/Kconfig/soc/: Kconfig.defconfig.tmp  Kconfig.soc.tmp  Kconfig.sysbuild  Kconfig.tmp
build_imu/modules/acpica/: cmake_install.cmake
build_imu/modules/adi/: cmake_install.cmake
build_imu/modules/atmel/: cmake_install.cmake
build_imu/modules/cmsis/: cmake_install.cmake
build_imu/modules/cmsis-dsp/: cmake_install.cmake
build_imu/modules/cmsis-nn/: cmake_install.cmake
build_imu/modules/cmsis_6/: cmake_install.cmake
build_imu/modules/dhara/: cmake_install.cmake
build_imu/modules/fatfs/: cmake_install.cmake
build_imu/modules/hal_afbr/: cmake_install.cmake
build_imu/modules/hal_ambiq/: cmake_install.cmake
build_imu/modules/hal_bouffalolab/: cmake_install.cmake
build_imu/modules/hal_espressif/: cmake_install.cmake
build_imu/modules/hal_ethos_u/: cmake_install.cmake
build_imu/modules/hal_gigadevice/: cmake_install.cmake
build_imu/modules/hal_infineon/: cmake_install.cmake
build_imu/modules/hal_intel/: cmake_install.cmake
build_imu/modules/hal_nordic/: cmake_install.cmake
build_imu/modules/hal_nxp/: cmake_install.cmake
build_imu/modules/hal_realtek/: cmake_install.cmake
build_imu/modules/hal_renesas/: cmake_install.cmake
build_imu/modules/hal_rpi_pico/: cmake_install.cmake
build_imu/modules/hal_sifli/: cmake_install.cmake
build_imu/modules/hal_silabs/: cmake_install.cmake
build_imu/modules/hal_st/: cmake_install.cmake
build_imu/modules/hal_stm32/: cmake_install.cmake
build_imu/zephyr/: .cmake.dotconfig.checksum  .config  .config-trace.json  .config-trace.pickle  cmake_install.cmake  edt.pickle  edt.pickle.cmake.new  isr_tables.c  linker.cmd  linker.cmd.dep  linker_zephyr_pre0.cmd  linker_zephyr_pre0.cmd.dep  runners.yaml  snippets_generated.cmake  syscall_weakdefs_llext.c  zephyr.dts  zephyr.dts.d  zephyr.dts.pre  zephyr.elf  zephyr.hex  zephyr.stat  zephyr_final.map  zephyr_pre0.elf  zephyr_pre0.map
include/: imu_9axis.h  unit_tests.h
src/: imu_9axis.c  imu_board_init.c  main.c  test_can_loopback.c  test_imu_uart.c  test_pwm_led.c
src/imu/: imu_9axis.c
src/minimal_tests/: bmi088_minimal_test.c  bmi088_test.c  can_loopback_test.c  imu_justfloat_test.c  imu_temp_test.c  ist8310_minimal_test.c  ist8310_test.c  minimal_test_serial.c  minimal_test_serial.h  test_can_loopback.c  test_imu_uart.c  test_pwm_led.c  uart_minimal_test.c  uart_test.c
(+195 files in other folders)
